--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,6 +20,7 @@ $font-color-sub02 : #999;
 $border-color :  #DFDFDF;
 $bg-color01 : #F6F7FB;
 $bg-color02 : #F8F8F8;
+$bg-color03 : #F6F6F6;
 
 $white : #fff;
 $yellow : #FFD912;
@@ -31,5 +32,7 @@ $badge03 : #2F3C49;
 
 
 /* size */
+$header-height : 133px;
+
 
 
