--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,12 @@
 @import "./component/go_to_top";
 @import "./component/header";
 @import "./component/menu_item";
+@import "./component/page_layout";
+@import "./component/share_modal";
 
 
 @import "./pages/index";
+@import "./pages/prd_detail";
 
 
 
