--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,9 @@
+@charset "UTF-8";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
 /* Font Family */
 /* color */
 /* size */
-html {
-  scroll-behavior: smooth;
-}
-
 * {
   font-family: "Noto Sans KR", sans-serif;
   font-size: 15px;
@@ -69,6 +66,12 @@ section:not(.visual-area) {
   border: 1px solid #333;
   border-width: 1px 1px 0 0;
   transform: rotate(45deg);
+}
+
+.cancel-btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 .slick-prev,
@@ -568,6 +571,120 @@ section:not(.visual-area) {
     font-weight: 500;
   }
 }
+.page-layout {
+  background-color: #F6F6F6;
+}
+.page-layout .common-inner {
+  margin-top: 133px;
+}
+.page-layout .page-layout-content {
+  display: flex;
+  gap: 30px;
+}
+.page-layout .page-layout-content > div {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  padding: 30px;
+}
+.page-layout .left-box {
+  flex: 1;
+}
+.page-layout .right-box {
+  flex-basis: 330px;
+  position: sticky;
+  top: 140px;
+  height: 700px;
+}
+
+.share-area {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 400px;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0, 0, rgba(0, 0, 0, 0.09);
+  z-index: 101;
+}
+.share-area h2 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 40px;
+}
+.share-area .share-list {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.share-area .share-item {
+  cursor: pointer;
+  flex: 1;
+  text-align: center;
+}
+.share-area .share-item .bi {
+  display: block;
+  width: 50px;
+  height: 50px;
+  font-size: 1.5em;
+  line-height: 42px;
+  border-radius: 3px;
+  color: #fff;
+}
+.share-area .share-item span {
+  display: block;
+  font-size: 12px;
+  margin-top: 5px;
+}
+.share-area .share-item.share-link {
+  position: relative;
+}
+.share-area .share-item.share-link .copied-link {
+  display: none;
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 10px;
+  background-color: #333;
+  color: #fff;
+  white-space: nowrap;
+  padding: 4px 7px;
+  border-radius: 3px;
+}
+.share-area .share-item.share-link .copied-link::after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  background-color: #333;
+  display: inline-block;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.share-area .share-item:nth-child(1) .bi {
+  background: #385998;
+}
+.share-area .share-item:nth-child(2) .bi {
+  background: #55acee;
+}
+.share-area .share-item:nth-child(3) .bi {
+  background: #ffe812;
+  color: #333;
+}
+.share-area .share-item:nth-child(4) .bi {
+  background: #e8e8e8;
+  color: #333;
+  font-size: 2em;
+}
+
 .visual-area .visual-list .visual-item {
   position: relative;
   cursor: pointer;
@@ -943,6 +1060,475 @@ section:not(.visual-area) {
   color: #fff;
 }
 
+.prd-detail-area {
+  /* left */
+  /* right */
+}
+.prd-detail-area .prd-info-area {
+  /* 제품소개 */
+  /* 상품리뷰 */
+  /* 상품문의 */
+  /* 배송환불 */
+  /* 뮷즈가방 */
+}
+.prd-detail-area .prd-info-area .prd-info-navigation {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 30px 0;
+  border-bottom: 1px solid #DFDFDF;
+  background-color: #fff;
+  z-index: 2;
+  position: sticky;
+  top: 120px;
+  height: 50px;
+}
+.prd-detail-area .prd-info-area .prd-info-navigation a {
+  position: relative;
+}
+.prd-detail-area .prd-info-area .prd-info-navigation a.is-active {
+  font-weight: 500;
+  color: #275236;
+}
+.prd-detail-area .prd-info-area .prd-info-navigation a.is-active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  height: 3px;
+  width: 100%;
+  background-color: #275236;
+}
+.prd-detail-area .prd-info-area .info-header {
+  margin: 30px 0;
+  position: relative;
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #275236;
+}
+.prd-detail-area .prd-info-area .info-header::before {
+  content: "";
+  width: 4px;
+  height: 22px;
+  background-color: #275236;
+  position: absolute;
+  left: 0;
+  top: 5px;
+}
+.prd-detail-area .prd-info-area .more-btn {
+  margin: 20px auto 0;
+  display: block;
+  width: 120px;
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: white;
+  border: 1px solid #2F3C49;
+  color: #2F3C49;
+  font-weight: 500;
+  transition: 0.3s;
+}
+.prd-detail-area .prd-info-area .more-btn:hover {
+  color: #fff;
+  background-color: #2F3C49;
+  border-color: transparent;
+}
+.prd-detail-area .prd-info-area .more-btn::after {
+  display: none;
+}
+.prd-detail-area .prd-info-area .write-btn {
+  border: 1px solid;
+  width: 110px;
+  text-align: center;
+  padding: 8px;
+  display: block;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-left: auto;
+  margin-top: -30px;
+  margin-bottom: 10px;
+  transition: 0.2s;
+}
+.prd-detail-area .prd-info-area .write-btn:hover {
+  background-color: #275236;
+  color: #fff;
+  border-color: transparent;
+}
+.prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content {
+  display: flex;
+  gap: 20px;
+}
+.prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content > div {
+  flex: 1;
+}
+.prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content .prd-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content .prd-desc dl {
+  display: flex;
+  border-bottom: 1px solid #DFDFDF;
+  padding: 20px 0;
+}
+.prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content .prd-desc dl dt {
+  font-weight: 500;
+  flex-shrink: 0;
+  flex-basis: 100px;
+}
+.prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content .prd-desc dl dd {
+  color: #666;
+  letter-spacing: -0.3px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content {
+  display: flex;
+  background-color: #F6F6F6;
+  border-radius: 15px;
+  padding: 15px 25px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content > div {
+  flex: 1;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-stars-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-stars-group .rating {
+  font-size: 30px;
+  font-weight: 500;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-stars-group .stars .bi {
+  font-size: 25px;
+  color: #FFD912;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin: 5px 0;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram:nth-child(3) .review-diagram-bar .review-diagram-bar-progress, .prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram:nth-child(4) .review-diagram-bar .review-diagram-bar-progress, .prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram:nth-child(5) .review-diagram-bar .review-diagram-bar-progress {
+  background-color: #bdbdbd;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram b {
+  font-size: 16px;
+  font-weight: 500;
+  flex-shrink: 0;
+  margin-right: 10px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram .review-diagram-bar {
+  background-color: #DFDFDF;
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+  position: relative;
+}
+.prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-diagram-group .review-diagram .review-diagram-bar .review-diagram-bar-progress {
+  position: absolute;
+  background-color: #FFD912;
+  height: inherit;
+  border-radius: inherit;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-riview-list {
+  margin-top: 40px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item {
+  border-bottom: 1px solid #DFDFDF;
+  display: flex;
+  gap: 10px;
+  padding-bottom: 10px;
+  margin: 10px 0;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item:hover {
+  background-color: #F8F8F8;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-img {
+  width: 100px;
+  height: 100px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment {
+  flex: 1;
+  padding-right: 10px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment span {
+  font-size: 14px;
+  color: #666;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment .user-info {
+  display: flex;
+  justify-content: space-between;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment .user-info .user-star-prd .stars .bi {
+  color: #FFD912;
+  font-size: 14px;
+}
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment .user-info .user-star-prd .prd-info {
+  margin-left: 7px;
+}
+.user-name-date .user-name {
+  margin-right: 10px;
+  position: relative;
+}
+.user-name-date .user-name::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  top: 5px;
+  right: -7px;
+  height: 13px;
+  background-color: #DFDFDF;
+}
+
+.prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment p {
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 19px;
+  max-height: 57px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical; /* autoprefixer: off */
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item {
+  display: flex;
+  gap: 50px;
+  border-bottom: 1px solid #DFDFDF;
+  padding: 25px 0;
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item:hover {
+  background-color: #F8F8F8;
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item .inquiry-title {
+  flex: 3;
+  font-weight: 400;
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item .inquiry-title::after {
+  content: "\e897";
+  font-family: "Material Icons";
+  margin-left: 3px;
+  font-size: 15px;
+  display: inline-block;
+  transform: translateY(2px);
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item .user-name-date span {
+  color: #666;
+  font-size: 14px;
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item .answer-status {
+  padding-right: 10px;
+  font-size: 14px;
+  color: #666;
+}
+.prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item .answer-status.answer-complete {
+  color: #275236;
+  font-weight: 400;
+}
+.prd-detail-area .prd-info-area .prd-refund-group .refund-title {
+  font-weight: 500;
+  padding: 10px 0;
+  font-size: 16px;
+  cursor: pointer;
+  border-bottom: 1px solid #DFDFDF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.prd-detail-area .prd-info-area .prd-refund-group .refund-title::after {
+  content: "\e5cf";
+  font-family: "Material Icons";
+  font-size: 20px;
+}
+.prd-detail-area .prd-info-area .prd-refund-group .refund-title.is-active::after {
+  transform: rotate(180deg);
+}
+.prd-detail-area .prd-info-area .prd-refund-group .refund-desc {
+  padding: 10px 0 10px 18px;
+  line-height: 1.8em;
+  display: none;
+}
+.prd-detail-area .prd-info-area .prd-refund-group .refund-desc li {
+  list-style-type: disc;
+  font-size: 14px;
+  color: #666;
+}
+.prd-detail-area .prd-info-area .prd-refund-group .refund-desc li:last-child {
+  margin-bottom: 0;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .prd-mudsbag-content {
+  display: flex;
+  justify-content: space-between;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .prd-mudsbag-content > div {
+  flex: 1;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item {
+  text-align: center;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item:first-child {
+  border-right: 1px solid #DFDFDF;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item .bag-img {
+  width: 250px;
+  margin: 0 auto;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item .bag-img img {
+  display: block;
+  width: 100%;
+}
+.prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item .bag-desc {
+  margin-top: 10px;
+  line-height: 1.5;
+}
+.prd-detail-area .prd-option-area .option-title {
+  position: relative;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #DFDFDF;
+}
+.prd-detail-area .prd-option-area .option-title .hashtag-group {
+  font-size: 13px;
+}
+.prd-detail-area .prd-option-area .option-title .prd-item {
+  margin: 0;
+}
+.prd-detail-area .prd-option-area .option-title .prd-item .prd-badge-area {
+  margin-top: 10px;
+}
+.prd-detail-area .prd-option-area .option-title .prd-item .prd-info-area {
+  margin-top: 0;
+}
+.prd-detail-area .prd-option-area .option-title .share-group {
+  position: absolute;
+  bottom: -3px;
+  right: 0;
+}
+.prd-detail-area .prd-option-area .option-title .share-group button {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  padding: 10px;
+  cursor: pointer;
+}
+.prd-detail-area .prd-option-area .option-title .share-group button i {
+  font-size: 20px;
+  color: #666;
+}
+.prd-detail-area .prd-option-area .option-title .share-group .fav-btn .bi {
+  color: red;
+}
+.prd-detail-area .prd-option-area .option-group select {
+  width: 100%;
+  border: 1px solid #DFDFDF;
+  padding: 10px 3px;
+  font-size: 13px;
+  margin-top: 15px;
+  outline: none;
+}
+.prd-detail-area .prd-option-area .option-group select.color-select {
+  border-color: #275236;
+}
+.prd-detail-area .prd-option-area .option-group option {
+  color: #666;
+  font-size: 12px;
+}
+.prd-detail-area .prd-option-area .option-group .select-area {
+  position: relative;
+  background-color: #F8F8F8;
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px 5px;
+}
+.prd-detail-area .prd-option-area .option-group .select-area li {
+  font-size: 13px;
+}
+.prd-detail-area .prd-option-area .option-group .select-area .amount-select {
+  display: flex;
+  align-items: center;
+  width: 95px;
+  height: 25px;
+  border: 1px solid #DFDFDF;
+  margin-top: 15px;
+  background-color: #fff;
+}
+.prd-detail-area .prd-option-area .option-group .select-area .amount-select .btn-minus,
+.prd-detail-area .prd-option-area .option-group .select-area .amount-select .btn-plus {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  width: 25px;
+  height: 25px;
+}
+.prd-detail-area .prd-option-area .option-group .select-area .amount-select .btn-minus span,
+.prd-detail-area .prd-option-area .option-group .select-area .amount-select .btn-plus span {
+  font-size: 15px;
+}
+.prd-detail-area .prd-option-area .option-group .select-area .amount-select .amount {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 25px;
+  font-size: 12px;
+}
+.cancel-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.cancel-btn span {
+  font-size: 12px;
+  color: #666;
+  padding: 7px;
+}
+
+.prd-detail-area .prd-option-area .option-group .total-price {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.prd-detail-area .prd-option-area .option-group .total-price p {
+  font-weight: 500;
+}
+.prd-detail-area .prd-option-area .option-group .total-price span {
+  font-size: 20px;
+  font-weight: 700;
+}
+.prd-detail-area .prd-option-area .option-action {
+  display: flex;
+  gap: 15px;
+  margin-top: 7px;
+  position: relative;
+}
+.prd-detail-area .prd-option-area .option-action .btn-common {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  font-weight: 500;
+  margin: 5px 0;
+  cursor: pointer;
+}
+.prd-detail-area .prd-option-area .option-action .btn-cart {
+  border: 1px solid #275236;
+  background-color: #fff;
+  color: #275236;
+}
+.prd-detail-area .prd-option-area .option-action .btn-buy {
+  border: 1px solid transparent;
+  background-color: #275236;
+  color: #fff;
+}
+
 @media (max-width: 1024px) {
   section:not(.visual-area) {
     padding: 35px 0px;
@@ -1129,6 +1715,16 @@ section:not(.visual-area) {
     margin-top: 10px;
     padding-top: 10px;
     border-top: 1px solid #DFDFDF;
+  }
+  /* ####################### prd_detail.html  ########################## */
+  section.page-layout {
+    padding: 35px 15px;
+  }
+  .page-layout .page-layout-content {
+    flex-direction: column-reverse;
+  }
+  .page-layout .right-box {
+    position: static;
   }
 }
 @media (max-width: 767px) {
@@ -1406,5 +2002,74 @@ section:not(.visual-area) {
   }
   .footer-area .copyright-group address {
     display: none;
+  }
+  /* ##########prd_detail.html################## */
+  .page-layout .page-layout-content > div {
+    box-shadow: none;
+    padding: 10px;
+    border-radius: 0;
+  }
+  .prd-detail-area .prd-info-area .write-btn {
+    width: 75px;
+    padding: 5px;
+  }
+  .prd-detail-area .prd-info-area .prd-info-navigation {
+    gap: 10px;
+    overflow-y: hidden;
+  }
+  .prd-detail-area .prd-info-area .prd-info-navigation a {
+    font-size: 14px;
+    white-space: nowrap;
+  }
+  .prd-detail-area .prd-info-area .prd-desc-group .prd-desc-content {
+    flex-direction: column;
+  }
+  .prd-detail-area .prd-info-area .prd-review-group .prd-review-content {
+    flex-direction: column;
+  }
+  .prd-detail-area .prd-info-area .prd-review-group .prd-review-content .review-stars-group {
+    flex-direction: column;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #DFDFDF;
+  }
+  .prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment .user-info {
+    flex-direction: column;
+  }
+  .prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment .user-info .user-star-prd .prd-info {
+    margin-left: 0px;
+    display: block;
+  }
+  .prd-detail-area .prd-info-area .prd-review-group .user-review-item .user-comment p {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 19px;
+    max-height: 19px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical; /* autoprefixer: off */
+  }
+  .prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item {
+    gap: 15px;
+    padding: 17px 0;
+  }
+  .prd-detail-area .prd-info-area .prd-inquiry-group .user-inquiry-item .inquiry-title {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .prd-detail-area .prd-info-area .prd-mudsbag-group .prd-mudsbag-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  .prd-detail-area .prd-info-area .prd-mudsbag-group .prd-mudsbag-content > div {
+    flex: 1;
+  }
+  .prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item .bag-img {
+    width: 120px;
+  }
+  .prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item .bag-desc {
+    font-size: 10px;
   }
 }
