--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,8 +1,5 @@
 // reset
 
-html{
-  scroll-behavior: smooth;
-}
 
 * {
     font-family:$font-default;
@@ -74,6 +71,11 @@ section:not(.visual-area) {
 
   }
 }
+.cancel-btn {
+  border: none;
+  outline: none;
+  background-color: $transparent;
+}
 
 
 // slick
@@ -109,4 +111,14 @@ section:not(.visual-area) {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+@mixin multi-ellipsis($font-size, $line-height, $lines) {
+  font-size: $font-size;
+  line-height: $line-height;
+  max-height: $line-height * $lines;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical; /* autoprefixer: off */
 }
