--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -2,6 +2,9 @@
   section:not(.visual-area) {
     padding: 35px 0px;
   }
+  section.register-area {
+    padding: 35px 15px;
+  }
   .common-inner {
     width: 100%;
   }
