--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,204 @@ section:not(.visual-area) {
   color: #fff;
 }
 
+.orderlist-area {
+  /* left */
+  /* right */
+}
+.orderlist-area .title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.orderlist-area .cart-area .chkAll-group {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #DFDFDF;
+  padding-bottom: 15px;
+}
+.orderlist-area .cart-area .chkAll-group span {
+  font-weight: 400;
+}
+.orderlist-area .cart-area .chkAll-group span .chkALl {
+  width: 17px;
+  height: 17px;
+  accent-color: #275236;
+  transform: translateY(3px);
+  margin-right: 5px;
+}
+.orderlist-area .cart-area .chkAll-group span em {
+  font-style: normal;
+  color: #275236;
+}
+.orderlist-area .cart-area .chkAll-group .btn-clearAll {
+  font-size: 13px;
+  border: 1px solid #DFDFDF;
+  border-radius: 3px;
+  padding: 3px;
+}
+.orderlist-area .cart-area .cart-item {
+  position: relative;
+  display: flex;
+  gap: 15px;
+  border-bottom: 1px solid #DFDFDF;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+.orderlist-area .cart-area .cart-item:last-child {
+  border: none;
+}
+.orderlist-area .cart-area .cart-item .chk {
+  width: 15px;
+  height: 15px;
+  accent-color: #275236;
+}
+.orderlist-area .cart-area .cart-item .prd-thum {
+  width: 160px;
+  border: 1px solid #DFDFDF;
+  overflow: hidden;
+}
+.orderlist-area .cart-area .cart-item .prd-thum img {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+  display: block;
+}
+.orderlist-area .cart-area .cart-item .prd-overview {
+  flex: 1;
+  display: flex;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-name {
+  font-weight: 500;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box dl {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 3px;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box dl dt {
+  font-weight: 400;
+  font-size: 12px;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box dl dd {
+  font-size: 12px;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box .optChange-btn {
+  font-size: 11px;
+  color: #222;
+  background-color: #DFDFDF;
+  font-weight: 400;
+  padding: 3px;
+  border-radius: 3px;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-price {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: right;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-price .discount-rate {
+  color: #9E302C;
+  font-weight: 500;
+  font-size: 14px;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-price .original-price {
+  color: #666;
+  text-decoration: line-through;
+  font-size: 12px;
+  font-weight: 400;
+}
+.orderlist-area .cart-area .cart-item .prd-overview .prd-price .current-price {
+  font-size: 16px;
+  font-weight: 500;
+  display: block;
+}
+.orderlist-area .cart-area .cart-item .btn-clear {
+  position: absolute;
+  right: -10px;
+  top: -5px;
+  font-size: 14px;
+  padding: 10px;
+}
+.orderlist-area .payment-area {
+  max-height: 480px;
+}
+.orderlist-area .payment-area > div {
+  margin-bottom: 30px;
+}
+.orderlist-area .payment-area .price-group > div {
+  display: flex;
+  justify-content: space-between;
+}
+.orderlist-area .payment-area .price-group > div b {
+  font-weight: 400;
+}
+.orderlist-area .payment-area .price-group > div em {
+  font-style: normal;
+}
+.orderlist-area .payment-area .price-group .current-price {
+  border-bottom: 1px solid #DFDFDF;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+}
+.orderlist-area .payment-area .price-group .current-price em {
+  font-size: 20px;
+  color: #275236;
+  font-weight: 400;
+}
+.orderlist-area .payment-area .price-group .discount-price em {
+  color: #9E302C;
+}
+.orderlist-area .payment-area .payment-method-group label {
+  display: block;
+  cursor: pointer;
+  margin-bottom: 7px;
+}
+.orderlist-area .payment-area .payment-method-group label:last-child {
+  margin-bottom: 0;
+}
+.orderlist-area .payment-area .payment-method-group label b {
+  font-size: 12px;
+  font-weight: 400;
+  margin-left: 3px;
+  color: #ED2040;
+}
+.orderlist-area .payment-area .payment-method-group label input[type=radio] {
+  display: none;
+}
+.orderlist-area .payment-area .payment-method-group label input[type=radio] + em {
+  width: 20px;
+  height: 20px;
+  margin-right: 7px;
+  transform: translateY(5px);
+  display: inline-block;
+  background: url("/images/ico-radio.png") no-repeat;
+  background-position: left;
+}
+.orderlist-area .payment-area .payment-method-group label input[type=radio]:checked + em {
+  background-position: right;
+}
+.orderlist-area .payment-area .payment-method-group label img {
+  height: 20px;
+  margin-right: 5px;
+  transform: translateY(3px);
+}
+.orderlist-area .payment-area .payment-method-group .btn-final-payment {
+  background-color: #275236;
+  width: 100%;
+  padding: 10px;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 15px;
+}
+
 .prd-detail-area {
   /* left */
   /* right */
@@ -2229,5 +2427,73 @@ section:not(.visual-area) {
   }
   .prd-detail-area .prd-info-area .prd-mudsbag-group .bag-item .bag-desc {
     font-size: 10px;
+  }
+  section.orderlist-area {
+    padding: 0;
+  }
+  .orderlist-area {
+    /* left */
+    /* #################################### */
+  }
+  .orderlist-area .page-layout-content {
+    gap: 0;
+    padding: 15px;
+    background-color: #fff;
+  }
+  .orderlist-area .cart-area .cart-item {
+    padding-top: 20px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-thum {
+    width: 80px;
+    height: 80px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview {
+    flex-direction: column;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-name {
+    font-size: 14px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box dl {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 3px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box dl dt {
+    flex-shrink: 0;
+    font-weight: 400;
+    font-size: 12px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box dl dd {
+    font-size: 12px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-info .prd-option-box .optChange-btn {
+    font-size: 11px;
+    color: #222;
+    background-color: #DFDFDF;
+    font-weight: 400;
+    padding: 3px;
+    border-radius: 3px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-price {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    text-align: right;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-price .discount-rate {
+    color: #9E302C;
+    font-weight: 500;
+    font-size: 14px;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-price .original-price {
+    color: #666;
+    text-decoration: line-through;
+    font-size: 12px;
+    font-weight: 400;
+  }
+  .orderlist-area .cart-area .cart-item .prd-overview .prd-price .current-price {
+    font-size: 16px;
+    font-weight: 500;
+    display: block;
   }
 }
