--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -711,4 +711,92 @@
     } 
   }
 
+  section.orderlist-area {
+    padding: 0;
+  }
+  .orderlist-area {
+    .page-layout-content {
+      gap: 0;
+      padding: 15px;
+      background-color: $white;
+    }
+
+/* left */
+  .cart-area {
+    .cart-item {
+      padding-top: 20px;
+
+      .prd-thum {
+        width: 80px;
+        height: 80px;
+      }
+
+      .prd-overview {
+        flex-direction: column;
+
+        .prd-info {
+          .prd-name {
+            font-size: 14px;
+          }
+
+          .prd-option-box {
+            dl {
+              display: flex;
+              gap: 20px;
+              margin-bottom: 3px;
+
+              dt {
+                flex-shrink: 0;
+                font-weight: 400;
+                font-size: 12px;
+              }
+
+              dd {
+                font-size: 12px;
+              }
+            }
+
+            .optChange-btn {
+              font-size: 11px;
+              color: #222;
+              background-color: $border-color;
+              font-weight: 400;
+              padding: 3px;
+              border-radius: 3px;
+            }
+          }
+        }
+
+        .prd-price {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          text-align: right;
+
+          .discount-rate {
+            color: #9E302C;
+            font-weight: 500;
+            font-size: 14px;
+          }
+
+          .original-price {
+            color: $font-color-sub;
+            text-decoration: line-through;
+            font-size: 12px;
+            font-weight: 400;
+          }
+
+          .current-price {
+            font-size: 16px;
+            font-weight: 500;
+            display: block;
+          }
+        }
+      }
+
+    }
+  }
+/* #################################### */
+  }
+
   }
