--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -103,6 +103,7 @@
     .title-group {
       display: flex;
       height: auto;
+      padding: 0;
       .img {
         width: 50%;
         height: 158px;
