--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,60 @@ section:not(.visual-area) {
   padding: 60px 0;
 }
 
+.dimmed-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s ease;
+}
+.dimmed-layer.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.topbtn {
+  border: 1px solid #DFDFDF;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  position: fixed;
+  bottom: 20px;
+  right: -100px;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  transition: 0.35s;
+  cursor: pointer;
+}
+.topbtn.is-active {
+  right: 20px;
+}
+.topbtn:after {
+  content: "top";
+  text-transform: uppercase;
+  color: #333;
+  font-size: 10px;
+  display: block;
+  margin-top: -3px;
+}
+.topbtn .bi {
+  color: #666;
+}
+
+.btn-modal-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 15px;
+  font-size: 17px;
+}
+
 .common-inner {
   width: 1160px;
   position: relative;
@@ -607,7 +661,6 @@ section:not(.visual-area) {
 }
 
 .share-area {
-  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1881,6 +1934,30 @@ section:not(.visual-area) {
   font-size: 13px;
   text-decoration: underline;
 }
+.login-group span {
+  font-size: 11px;
+  display: block;
+  word-break: keep-all;
+  color: #679963;
+  margin-top: 3px;
+}
+
+.login-modal {
+  width: 360px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  border-radius: 10px;
+}
+.login-modal h1 {
+  text-align: center;
+  color: #275236;
+  font-weight: 500;
+  font-size: 18px;
+}
 
 @media (max-width: 1024px) {
   section:not(.visual-area) {
@@ -1958,6 +2035,7 @@ section:not(.visual-area) {
   .exhibition-area .title-group {
     display: flex;
     height: auto;
+    padding: 0;
   }
   .exhibition-area .title-group .img {
     width: 50%;
