--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./component/menu_item";
 @import "./component/page_layout";
 @import "./component/share_modal";
+@import "./component/login_modal";
 
 
 @import "./pages/index";
