--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -387,7 +387,8 @@
     .best-group {
       overflow-x: hidden;
       .prd-list {
-        width: 550px;
+        width: 510px;
+        margin: 0 auto;
       }
     }
   }
@@ -396,7 +397,8 @@
     .new-group {
       overflow-x: hidden;
       .prd-list {
-        width: 550px;
+        width: 510px;
+        margin: 0 auto;
       }
     }
 
