--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -352,11 +352,12 @@
       display: block;
       position: absolute;
       cursor: pointer;
-      top: 10px;
-      left: 10px;
+      top: 0px;
+      left: 0px;
       font-size: 1.3em;
       background-color: transparent;
       border: none;
+      padding: 15px;
     }
   }
 
@@ -722,6 +723,7 @@
       gap: 0;
       padding: 15px;
       background-color: $white;
+      flex-direction: column;
     }
 
 /* left */
