--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -40,6 +40,10 @@ section:not(.visual-area) {
   padding: 60px 0;
 }
 
+body.fixed {
+overflow: hidden;
+}
+
 // dimmed-layer
 .dimmed-layer {
   position: fixed;
